# polygons_parallel_to_line

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Gemfile  Makefile  README.md  __init__.py  _config.yml  docker-compose.yml  index.md  metadata.txt  pb_tool.cfg  polygons_parallel_to_line.py  polygons_parallel_to_line_dialog_base.ui  pptl.py  pptl_algorithm.py  pptl_provider.py  pyproject.toml  resources.py  resources.qrc
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  release.yaml  test.yaml
Data4Testing/: line.dbf  line.prj  line.shp  line.shx  poly.dbf  poly.qpj  poly.shp  poly.shx
PolygonsParallelToLine/: __init__.py  metadata.txt  polygons_parallel_to_line.py  polygons_parallel_to_line_dialog.py  polygons_parallel_to_line_dialog_base.ui  resources.py
PolygonsParallelToLine/src/: algorithm.py  azimuth.py  const.py  line.py  map_tool.py  parallelizer.py  plugin.py  polygon.py  pptl.py  provider.py  reference.py  rotator.py  settings.py  settings_dialog.py  target.py
i18n/: PolygonsParallelToLine.pro  PolygonsParallelToLine_ru.qm  PolygonsParallelToLine_ru.ts  PolygonsParallelToLine_uk.qm  PolygonsParallelToLine_uk.ts  pptl.pro  pptl_ru.qm  pptl_ru.ts  pptl_uk.qm  pptl_uk.ts
polygons_parallel_to_line/: __init__.py  metadata.txt
polygons_parallel_to_line/src/: algorithm.py  azimuth.py  line.py  plugin.py  polygon.py  pptl.py  provider.py  rotator.py
src/: algorithm.py  helpers.py  line.py  plugin.py  polygon.py  pptl.py  pptl_algorithm.py  pptl_provider.py  provider.py  rotator.py
tests/: test___init__.py  test_algorithm.py  test_azimuth.py  test_main_functionality.py  test_map_tool.py  test_parallelizer.py  test_performance.py  test_plugin.py  test_pptl.py  test_provider.py  test_settings.py
