[tool.black]
line-length = 120

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING",
    "if cmd_folder not in sys.path",
    ]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
profile = "black"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = ["./"]
known_third_party = []
known_first_party = []

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = false
warn_return_any = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
exclude = ['.*/plugin.py', '.*/provider.py', '.*/test.*', 'PolygonsParallelToLine/__init__.py']

[project]
name = "polygons-parallel-to-line"
version = "1.1"
description = ""
authors = [{ name = "Andrii Liekariev", email = "elfpkck@gmail.com" }]
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.9"

[dependency-groups]
ci = [
    "pre-commit>=4.3.0",
    "pytest-cov==6.2.1",
    "pytest-qgis==2.1.0",
]
local = [
    {include-group = "ci"},
    "pydevd-pycharm",
]
